src/components/Form/FormItem.less
.dynamic-card {
  position: relative;
  box-sizing: border-box;
  max-width: 1300px;
}

.red {
  color: red;
}

.delete-button-text {
  .red();

  font-size: 20px;
}

.dynamic-delete {
  .delete-button-text();

  position: absolute;
  right: 5px;
  top: 5px;
}

.dynamic-delete-in-page {
  .delete-button-text();

  position: relative;
  top: -8px;
}

